# deutschifAI

./: .gitignore  .pre-commit-config.yaml  README.md  conftest.py  pyproject.toml  requirements.txt  vocabulary.db
.github/workflows/: lint-and-test.yml  lint.yml  python_ci.yml
src/: main.py
src/nav/: account.py  multiple_choice.py  translations.py  vocabulary.py
src/utils/: constans.py  database.py  generation.py
tests/utils/: test_database.py
