[tool.poetry]
name = "deutschifai"
version = "0.1.0"
description = "Web app to practice German"
authors = ["David Zumaquero <zumaquerodavid@gmail.com>"]
readme = "README.md"
[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.35.0"
langchain-openai = "^0.1.13"
openai = "^1.35.7"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
